<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pinku"
    tools:context=".AdminActivity">

    <ImageView
       android:layout_width="350dp"
       android:layout_height="200dp"
       android:id="@+id/selectproduct"
       android:cropToPadding="false"
       android:scaleType="centerCrop"
       android:src="@drawable/wings"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="20dp"
       android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/selectproduct"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textColorHint="@color/whitey"
        tools:ignore="LabelFor"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/product_name"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/buttons"
        android:autofillHints="" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/product_name"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textColorHint="@color/whitey"
        tools:ignore="LabelFor"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/product_description"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/buttons"
        android:autofillHints="" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/product_description"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textColorHint="@color/whitey"
        tools:ignore="LabelFor"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/product_price"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="95dp"
        android:background="@drawable/buttons"
        android:autofillHints="" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/addnewproduct"
        android:layout_below="@id/product_price"
        android:text="@string/add_new_product"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="95dp"
        android:padding="7dp"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@drawable/empty"
        android:textColor="@color/blacko"

        />

</RelativeLayout>