<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/first_app_logo"
        android:layout_width="176dp"
        android:layout_height="124dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/first_app_slogan"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="140dp"
        android:text="@string/pikapaint"
        android:textAlignment="center"
        android:textColor="@color/backgroundcolor"
        android:textSize="52sp"
        android:fontFamily="cursive" />

    <Button
        android:id="@+id/first_loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/already_have_an_account_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/first_joinnowbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/first_loginbutton"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/join_now"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</RelativeLayout>